@@ -40,8 +40,7 @@ boost_suffixes_python := $(addprefix -py,$(subst .,,$(pyversions)))
 boost_suffixes_mpi-python := $(boost_suffixes_python)
 
 # Files that are generated by filtering a template
-filtered_files = \
-	debian/libboost-doc.doc-base
+filtered_files = 
 
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/buildflags.mk
@@ -140,8 +139,8 @@ override_dh_install:
 	# package libboost-doc
 	rm -rf $(htmldir)
 	mkdir -p $(htmldir) 
-	cat debian/documentation-files | xargs cp --parents --target-directory=$(htmldir)
-	find doc libs -name doc | xargs -n1 cp --archive --parents --target-directory=$(htmldir)
+	#cat debian/documentation-files | xargs cp --parents --target-directory=$(htmldir)
+	#find doc libs -name doc | xargs -n1 cp --archive --parents --target-directory=$(htmldir)
 	rm -rf $(htmldir)/boost
 	dh_link -plibboost$(PKGVERSION)-doc \
 	   usr/include/boost \
